# srync

./: .clang-format  .gitmodules  meson.build
src/: client.cpp  connection.h  fs.cpp  fs.h  gencache.h  iovector.cpp  iovector.h  protocol.h  server.cpp  srync.cpp  srync.h  update_engine.h
